--- a/index.html
+++ b/index.html
@@ -119,35 +119,33 @@
                 <h1 class="mb-4">Denis Oluka</h1>
                 <h5 class="mb-4 title">Full-stack developer.</h5>
                 <p class="mb-4 info">
-                  I live in Kampala-Uganda. 
-                  I have experience in both <strong>mobile</strong> and <strong>web</strong> technologies, and have worked in distributed, remote-first teams.
-                  My stack is Ruby(Rails), Javascript(React) and Java(Android).
+                  I'm a creative software developer currently based in Kampala-Uganda. I have experience in distributed and remote first-teams.
                 </p>
                   <div class="social-icons">
                     <ul class="text-center">
                       <li>
                         <a href="https://www.facebook.com/dennylucaz"
-                        target="blank" ><i class="icon-facebook"></i
+                        target="_blank" ><i class="icon-facebook"></i
                         ></a>
                       </li>
                       <li>
                         <a href="https://twitter.com/dennylucaz"
-                        target="blank" ><i class="icon-twitter"></i
+                        target="_blank" ><i class="icon-twitter"></i
                         ></a>
                       </li>
                       <li>
                         <a href="https://instagram.com/dennylucaz"
-                        target="blank" ><i class="icon-instagram"></i
+                        target="_blank" ><i class="icon-instagram"></i
                         ></a>
                       </li>
                       <li>
                         <a href="https://linkedin.com/in/denis-oluka-73758185/"
-                        target="blank" ><i class="icon-linkedin"></i
+                        target="_blank" ><i class="icon-linkedin"></i
                         ></a>
                       </li>
                       <li>
                         <a href="https://github.com/OlukaDenis"
-                        target="blank" ><i class="icon-github"></i
+                        target="_blank" ><i class="icon-github"></i
                         ></a>
                       </li>
                       <li>
