--- a/projects.html
+++ b/projects.html
@@ -48,6 +48,8 @@
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
 	<link rel="stylesheet" href="css/style.css">
+
+	<link rel="icon" type="image/png" href="images/favicon.png"/>
 	
 
 	<script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101242484);</script>
