Adde google analytics events

--- a/public/index.html
+++ b/public/index.html
@@ -12,27 +12,27 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Denis Oluka | Profile</title>
+    <title>Denis Oluka | Portfolio</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
 
-    <meta name="title" content="Denis Oluka | Profile">
+    <meta name="title" content="Denis Oluka | Portfolio">
     <meta name="description" content="I'm a full-stack developer">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://olukadenis.me">
-    <meta property="og:title" content="Denis Oluka | Profile">
+    <meta property="og:title" content="Denis Oluka | Portfolio">
     <meta property="og:description" content="I'm a full-stack developer">
     <meta property="og:image" content="https://olukadenis.me/images/meta.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://olukadenis.me">
-    <meta property="twitter:title" content="Denis Oluka | Profile">
+    <meta property="twitter:title" content="Denis Oluka | Portfolio">
     <meta property="twitter:description" content="I'm a full-stack developer">
     <meta property="twitter:image" content="https://olukadenis.me/images/meta.png">
 
@@ -43,18 +43,9 @@
     <link href="https://fonts.googleapis.com/css?family=Bad+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600&display=swap" rel="stylesheet">
 
-    <script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101242484);</script>
-    <script async src="//static.getclicky.com/js"></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-161206924-2"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
 
-      gtag('config', 'UA-161206924-2');
-		</script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -78,9 +69,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    
-    <script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101242484);</script>
-<script async src="//static.getclicky.com/js"></script>
-<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101242484ns.gif" /></p></noscript>
+
   </body>
 </html>
