--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,19 @@
     <meta property="twitter:description" content="I'm a full-stack developer">
     <meta property="twitter:image" content="https://olukadenis.me/images/meta.png">
 
+       <!-- update the version number as needed -->
+       <script defer src="/__/firebase/7.24.0/firebase-app.js"></script>
+       <!-- include only the Firebase features as you need -->
+       <script defer src="/__/firebase/7.24.0/firebase-auth.js"></script>
+       <script defer src="/__/firebase/7.24.0/firebase-database.js"></script>
+       <script defer src="/__/firebase/7.24.0/firebase-messaging.js"></script>
+       <script defer src="/__/firebase/7.24.0/firebase-storage.js"></script>
+       <script defer src="/__/firebase/7.24.0/firebase-analytics.js"></script>
+       <script defer src="/__/firebase/7.24.0/firebase-remote-config.js"></script>
+       <script defer src="/__/firebase/7.24.0/firebase-performance.js"></script>
+       <!-- initialize the SDK after all desired features are loaded -->
+       <script defer src="/__/firebase/init.js"></script>
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
 
     <!--
