--- a/public/index.html
+++ b/public/index.html
@@ -15,25 +15,37 @@
     <title>Denis Oluka | Portfolio</title>
     <meta charset="utf-8" />
     <meta
+    name="description" 
+    content="Full stack developer" 
+    />
+    <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <meta
+      name="keywords"
+      content="kotlin, software-engineer, uganda, africa, software-engineering, developer, project, react, museveni, bobi-wine, web, mobile, android, software, software-development, elixir, node, nodejs, reactjs, java, mac, linux, android-studio, gradle, ruby, ruby-on-rails, graphql, css, html, scss, sass, material-design, nextjs, vue, vuejs, firebase, database, nosql, sql, fullstack, full-stack, back-end, front-end, postman, slack, git, github"
+      />
 
     <meta name="title" content="Denis Oluka | Portfolio">
     <meta name="description" content="I'm a full-stack developer">
 
     <!-- Open Graph / Facebook -->
+    <meta name="author" content="Denis Oluka" />
+    <link rel="canonical" href="https://dennydev.tech/" />
+    <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://dennydev.tech">
     <meta property="og:title" content="Denis Oluka | Portfolio">
-    <meta property="og:description" content="I'm a full-stack developer">
+    <meta property="og:description" content="Full stack developer">
     <meta property="og:image" content="https://dennydev.tech/images/meta.png">
+    <meta property="og:site_name" content="Denis Oluka" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://dennydev.tech">
     <meta property="twitter:title" content="Denis Oluka | Portfolio">
-    <meta property="twitter:description" content="I'm a full-stack developer">
+    <meta property="twitter:description" content="Full stack developer">
     <meta property="twitter:image" content="https://dennydev.tech/images/meta.png">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
