:sparkles: Add google console file to portfoilio

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <meta charset="utf-8" />
     <meta
     name="description" 
-    content="Full stack developer" 
+    content="I'm a developer, mentor, and freelancer." 
     />
     <meta
       name="viewport"
@@ -51,6 +51,8 @@
     <meta property="twitter:title" content="Denis Oluka | Portfolio">
     <meta property="twitter:description" content="I'm a developer, mentor, and freelancer.">
     <meta property="twitter:image" content="https://dennydev.tech/images/denis-oluka-meta.png">
+
+    <meta name="google-site-verification" content="wUClqywDALyQM3SBwn9WlDc6NoUNRsVvfeiiDHxGFoI" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
 
