:sparkles: Update analytics

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,8 @@
       android, software, software-development, elixir, node, nodejs, reactjs, java, mac, linux, android-studio, gradle, ruby, ruby-on-rails, 
       graphql, css, html, scss, sass, material-design, nextjs, vue, vuejs, firebase, database, nosql, sql, fullstack, full-stack, back-end, 
       front-end, postman, slack, git, github, denis-oluka, denis, oluka, denis oluka, oluka denis, google developer, teheca, teheca app, iseekme, 
-      tunga, tunga developer, android developer, gitlab, open source, open-source, twitter, dennycodev, OlukaDenis, "
+      tunga, tunga developer, android developer, gitlab, open source, open-source, twitter, dennycodev, OlukaDenis, denis developer uganda, oluka developer uganda,
+      building apps uganda, top developers in uganda"
       />
 
     <meta name="title" content="Denis Oluka | Portfolio">
@@ -54,31 +55,10 @@
 
     <meta name="google-site-verification" content="wUClqywDALyQM3SBwn9WlDc6NoUNRsVvfeiiDHxGFoI" />
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
 
   </body>
 </html>
