:sparkles: Add admin module to upload new projects

--- a/public/index.html
+++ b/public/index.html
@@ -1,64 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/logo192.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.svg" />
-    <!--
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/logo192.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.svg" />
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Denis Oluka | Portfolio</title>
-    <meta charset="utf-8" />
-    <meta
-    name="description" 
-    content="I'm a developer, mentor, and freelancer." 
-    />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta
-      name="keywords"
-      content="kotlin, software-engineer, uganda, africa, software-engineering, developer, project, react, museveni, bobi-wine, web, mobile, 
+  <title>Denis Oluka | Portfolio</title>
+  <meta charset="utf-8" />
+  <meta name="description" content="I'm a developer, mentor, and freelancer." />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="keywords" content="kotlin, software-engineer, uganda, africa, software-engineering, developer, project, react, museveni, bobi-wine, web, mobile, 
       android, software, software-development, elixir, node, nodejs, reactjs, java, mac, linux, android-studio, gradle, ruby, ruby-on-rails, 
       graphql, css, html, scss, sass, material-design, nextjs, vue, vuejs, firebase, database, nosql, sql, fullstack, full-stack, back-end, 
       front-end, postman, slack, git, github, denis-oluka, denis, oluka, denis oluka, oluka denis, google developer, teheca, teheca app, iseekme, 
       tunga, tunga developer, android developer, gitlab, open source, open-source, twitter, dennycodev, OlukaDenis, denis developer uganda, oluka developer uganda,
-      building apps uganda, top developers in uganda"
-      />
+      building apps uganda, top developers in uganda" />
 
-    <meta name="title" content="Denis Oluka | Portfolio">
-    <meta name="description" content="I'm a developer, mentor, and freelancer.">
+  <meta name="title" content="Denis Oluka | Portfolio">
+  <meta name="description" content="I'm a developer, mentor, and freelancer.">
 
-    <!-- Open Graph / Facebook -->
-    <meta name="author" content="Denis Oluka" />
-    <link rel="canonical" href="https://dennydev.tech/" />
-    <meta property="og:locale" content="en_US" />
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://dennydev.tech">
-    <meta property="og:title" content="Denis Oluka | Portfolio">
-    <meta property="og:description" content="I'm a developer, mentor, and freelancer.">
-    <meta property="og:image" content="https://dennydev.tech/images/denis-oluka-meta.png">
-    <meta property="og:site_name" content="Denis Oluka" />
+  <!-- Open Graph / Facebook -->
+  <meta name="author" content="Denis Oluka" />
+  <link rel="canonical" href="https://dennydev.tech/" />
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://dennydev.tech">
+  <meta property="og:title" content="Denis Oluka | Portfolio">
+  <meta property="og:description" content="I'm a developer, mentor, and freelancer.">
+  <meta property="og:image" content="https://dennydev.tech/images/denis-oluka-meta.png">
+  <meta property="og:site_name" content="Denis Oluka" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://dennydev.tech">
-    <meta property="twitter:title" content="Denis Oluka | Portfolio">
-    <meta property="twitter:description" content="I'm a developer, mentor, and freelancer.">
-    <meta property="twitter:image" content="https://dennydev.tech/images/denis-oluka-meta.png">
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://dennydev.tech">
+  <meta property="twitter:title" content="Denis Oluka | Portfolio">
+  <meta property="twitter:description" content="I'm a developer, mentor, and freelancer.">
+  <meta property="twitter:image" content="https://dennydev.tech/images/denis-oluka-meta.png">
 
-    <meta name="google-site-verification" content="wUClqywDALyQM3SBwn9WlDc6NoUNRsVvfeiiDHxGFoI" />
+  <meta name="google-site-verification" content="wUClqywDALyQM3SBwn9WlDc6NoUNRsVvfeiiDHxGFoI" />
 
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+</head>
 
-  </body>
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <!--
+      This HTML file is a template.
+      If you open it directly in the browser, you will see an empty page.
+
+      You can add webfonts, meta tags, or analytics to this file.
+      The build step will place the bundled scripts into the <body> tag.
+
+      To begin the development, run `npm start` or `yarn start`.
+      To create a production bundle, use `npm run build` or `yarn build`.
+    -->
+</body>
+
 </html>
